[gd_scene load_steps=26 format=3 uid="uid://6t63tf6kalgv"]

[ext_resource type="Script" uid="uid://dwtupihu4aa7i" path="res://scripts/ranged_enemy.gd" id="1_w6nvk"]
[ext_resource type="Texture2D" uid="uid://c85vnd1kd2scy" path="res://assets/Characters/Ranged_Enemy.png" id="2_j26r6"]
[ext_resource type="Script" uid="uid://b6eh588b640ag" path="res://scripts/ranged_enemy_hb.gd" id="3_7ycfa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_32iyl"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8y8sv"]
atlas = ExtResource("2_j26r6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0r0v"]
atlas = ExtResource("2_j26r6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs8wr"]
atlas = ExtResource("2_j26r6")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt8ko"]
atlas = ExtResource("2_j26r6")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shxkn"]
atlas = ExtResource("2_j26r6")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wf20"]
atlas = ExtResource("2_j26r6")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08e7j"]
atlas = ExtResource("2_j26r6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk70k"]
atlas = ExtResource("2_j26r6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afs0e"]
atlas = ExtResource("2_j26r6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctqqu"]
atlas = ExtResource("2_j26r6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v30je"]
atlas = ExtResource("2_j26r6")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j71uh"]
atlas = ExtResource("2_j26r6")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_306l0"]
atlas = ExtResource("2_j26r6")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4xi1"]
atlas = ExtResource("2_j26r6")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3fvf"]
atlas = ExtResource("2_j26r6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svioe"]
atlas = ExtResource("2_j26r6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdpoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y8sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0r0v")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs8wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt8ko")
}],
"loop": true,
"name": &"idle_left",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shxkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wf20")
}],
"loop": true,
"name": &"idle_right",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08e7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk70k")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afs0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctqqu")
}],
"loop": true,
"name": &"walk_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v30je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j71uh")
}],
"loop": true,
"name": &"walk_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_306l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4xi1")
}],
"loop": true,
"name": &"walk_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3fvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svioe")
}],
"loop": true,
"name": &"walk_up",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6b5q0"]
radius = 87.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0lq72"]
radius = 70.0071

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggspu"]
bg_color = Color(0.113725, 0.113725, 0.113725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkwwy"]
bg_color = Color(0.843137, 0, 0, 1)

[node name="RangedEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 34
script = ExtResource("1_w6nvk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_32iyl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_vdpoj")
animation = &"idle_down"
autoplay = "idle_down"

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_6b5q0")

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_0lq72")

[node name="RangedEnemyHB" type="ProgressBar" parent="."]
offset_left = -19.0
offset_top = -16.0
offset_right = 19.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_ggspu")
theme_override_styles/fill = SubResource("StyleBoxFlat_dkwwy")
max_value = 3.0
value = 3.0
show_percentage = false
script = ExtResource("3_7ycfa")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
